--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <!-- <button class="btton">Consultar Estado</button> -->
 
         <!-- MENU MOBILE -->
-        <div class="hambur">
+        <!-- <div class="hambur">
             <i class="fa-solid fa-bars fa-2x"></i>
-        </div>
+        </div> -->
     </header>
     <!-- FIN HEADER -->
 
@@ -281,7 +281,7 @@
         </section>
 
         <!-- PUNTOS, COMO DETALLE DE POSIBLE INTEGRACION DE SLIDE "SOLO EN MOBILE" -->
-        <div class="box3">
+        <!-- <div class="box3">
             <div class="circulos">
                 <div class="circle"></div>
                 <div class="circle"></div>
@@ -289,7 +289,7 @@
                 <div class="circle"></div>
             </div>
 
-        </div>
+        </div> -->
 
         <!-- simplify how your team... -->
 
@@ -303,6 +303,13 @@
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3540.1427052872536!2d-58.83399698499008!3d-27.46481628289299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca702a91fc1%3A0x918624cb55c4a0d2!2s25%20de%20Mayo%201476%2C%20W3400%20BCT%2C%20Corrientes!5e0!3m2!1ses-419!2sar!4v1673444592665!5m2!1ses-419!2sar"
                 width="900" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </section>
+        <section class="mapDirec2">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3540.1427052872536!2d-58.83399698499008!3d-27.46481628289299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca702a91fc1%3A0x918624cb55c4a0d2!2s25%20de%20Mayo%201476%2C%20W3400%20BCT%2C%20Corrientes!5e0!3m2!1ses-419!2sar!4v1673444592665!5m2!1ses-419!2sar"
+                width="300" height="0" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </section>
