--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 
     <script type="text/javascript" src="./floating-whatsapp-master/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="/floating-whatsapp-master/floating-wpp.min.js"></script>
-    <link rel="stylesheet" href="/floating-whatsapp-master/floating-wpp.min.css">
+    <script type="text/javascript" src="./floating-whatsapp-master/floating-wpp.min.js"></script>
+    <link rel="stylesheet" href="./floating-whatsapp-master/floating-wpp.min.css">
+    
     <title>Fogop</title>
 
 
@@ -442,7 +443,7 @@
     <script src="app.js"></script>
 
 
-    
+    <div id="myButton"></div>
 </body>
 
 </html>
