--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
         <!-- simplify how your team... -->
         <section class="box4">
             <h2 class="sub-title3">Consulta el estado de Deuda o imprimi tus boletas en la pagina de ACOR.</h2><br>
-            <button class="bt3"><a href="https://acor.gob.ar/" target="_blank">ir a ACOR</a></button><br>
+            <button class="bt3"><a class="go-acor" href="https://acor.gob.ar/" target="_blank">
+                <i class="fa-solid fa-share-from-square"></i>ir a ACOR
+            </a></button><br>
         </section>
         <h3 id="donde" class="title2">DONDE ESTAMOS</h3>
         <section class="mapDirec">
@@ -256,44 +258,46 @@
         <section class="mapDirec2">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3540.1427052872536!2d-58.83399698499008!3d-27.46481628289299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca702a91fc1%3A0x918624cb55c4a0d2!2s25%20de%20Mayo%201476%2C%20W3400%20BCT%2C%20Corrientes!5e0!3m2!1ses-419!2sar!4v1673444592665!5m2!1ses-419!2sar"
-                width="300" height="0" style="border:0;" allowfullscreen="" loading="lazy"
+                width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </section>
+
         <section class="grid-ubi">
-            <div class="grid-container2">
+            <div class="grid-container2">                
                 <div class="grid-item2">
-                    <h3>Horarios de Atencion</h3>
-                </div>
-                <div class="grid-item3">
-                    <h3>Lunes a Viernes de 8AM a 13PM</h3>
-                </div>
-                <div class="grid-item2">
-                    <h3>Direccion</h3>
+                    <i class="fa-solid fa-location-dot"></i>
+
                 </div>
                 <div class="grid-item3">
                     <h4>25 de Mayo 1476</h4>
                 </div>
                 <div class="grid-item2">
-                    <h4>Telefono</h4>
+                    <i class="fa-solid fa-clock"></i>
+
                 </div>
                 <div class="grid-item3">
-                    <h4>+54 9 379-4265994</h4>
+                    <div id="message">
+                        <span id="status"></span> - <span id="hours"></span>
+                    </div>                    
                 </div>
                 <div class="grid-item2">
-                    <h4>Correo Electronico</h4>
+                    <i class="fa-solid fa-phone"></i>
+
+                </div>
+                <div class="grid-item3">
+                    <a href="tel:5493794265994" target="_blank">
+                        <h4>+54 9 379-4265994</h4>
+                    </a>
+                </div>
+                <div class="grid-item2">
+                    <i class="fa-solid fa-envelope"></i>
+
                 </div>
                 <div class="grid-item3">
                     <h4>fogopmcc@gmail.com</h4>
                 </div>
-                <div class="grid-item2">
-                    <h4>0800-MANTENIMIENTO</h4>
-                </div>
-                <div class="grid-item3">
-                    <a href="tel:080055556864">
-                        <h4>0800-55556864</h4>
-                    </a>
-                </div>
+                
             </div>           
         </section>
     </main>
@@ -301,6 +305,12 @@
 
 
     <!-- INICIO FOOTER -->
+    <section class="box4">
+        <h2 class="sub-title3">Por inconvenientes con el servicio o para solicitar mantenimiento comunicate al:</h2><br>
+        <button class="bt3"><a class="phone800" href="tel:080055556864" target="_blank">
+            <i class="fa-solid fa-phone-volume"></i>0800-55556864
+        </a></button><br>
+    </section>
     <footer>
         <!-- FORMULARIO -->
         <section class="selector">
@@ -345,15 +355,14 @@
             <ul class="lista1">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx" target="_blank">Modelo de Nota</a></li>
-                <li><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos ART. 108°/109°</a>
-                </li>
-                <li><a href="https://sis.concejocorrientes.gob.ar/uploads/6837.pdf" target="_blank">Ordenanza N°
-                        6837</a></li>
+                <li><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos ART. 108°/109°</a></li>
+                <li><a href="https://sis.concejocorrientes.gob.ar/uploads/6837.pdf" target="_blank">Ordenanza N°6837</a></li>
             </ul>
             <ul class="lista2">
-                <li><a href="tel:080055556864" target="_blank">Mantenimiento</a></li>
+                <li><a href="tel:080055556864" target="_blank">0800-Mantenimiento</a></li>
                 <li><a href="#">Preguntas Frecuentes</a></li>
                 <li><a href="https://acor.gob.ar/" target="_blank">Pagina Acor</a></li>
+                <li><a href="https://ciudaddecorrientes.gov.ar/" target="_blank">Municipalidad Ctes.</a></li>
             </ul>
         </section>
         <!-- LOGOS REDES SOCIALES -->
