--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <!-- MENU DESKTOP -->
         <nav class="mn-dsktop">
             <ul class="desktop-menu">
-                <li><a href="#project">Proyecto de Luminarias</a></li>
-                <li><a href="#obras">Sobre Obras</a></li>
-                <li><a href="#pagos">Sobre Pagos</a></li>
+                <li><a class="navcolor2" href="#project">Proyecto de Luminarias</a></li>
+                <li><a class="navcolor3" href="#obras">Sobre Obras</a></li>
+                <li><a class="navcolor4" href="#pagos">Sobre Pagos</a></li>
                 <!-- <li><a href="#">Acerca de Fogop</a></li> -->
-                <li><a href="#donde">Donde Estamos</a></li>
+                <li><a class="navcolor5" href="#donde">Donde Estamos</a></li>
             </ul>
         </nav>
         <!-- <button class="btton">Consultar Estado</button> -->
@@ -183,13 +183,13 @@
                     <div class="grid-item1">
                         <h3>HORARIOS</h3>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item rowone">
                         <h4>ACOR</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item rowone">
                         <h4>Avenida La Paz 2440</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item rowone">
                         <h4>7:30AM a 16PM</h4>
                     </div>
                     <div class="grid-item">
@@ -201,13 +201,13 @@
                     <div class="grid-item">
                         <h4>7AM a 13PM y 15AM a 20:30PM</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item rowone">
                         <h4>B° Molina Punta</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item rowone">
                         <h4>Las Margaritas y Jose Negro</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item rowone">
                         <h4>8AM a 12AM</h4>
                     </div>
                     <div class="grid-item">
@@ -219,13 +219,13 @@
                     <div class="grid-item">
                         <h4>8AM a 12AM y 14:30PM a 19:30PM</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item rowone">
                         <h4>B° Guemes</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item rowone">
                         <h4>Las Heras y Medrano</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item rowone">
                         <h4>8AM a 12AM</h4>
                     </div>
                     <div class="grid-item">
@@ -354,15 +354,17 @@
         <section class="listas">
             <ul class="lista1">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx" target="_blank">Modelo de Nota</a></li>
-                <li><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos ART. 108°/109°</a></li>
+                <li><a href="https://ciudaddecorrientes.gov.ar/" target="_blank">Municipalidad de Corrientes</a></li>
                 <li><a href="https://sis.concejocorrientes.gob.ar/uploads/6837.pdf" target="_blank">Ordenanza N°6837</a></li>
+                <li><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos ART. 108°/109°</a></li>
+
             </ul>
             <ul class="lista2">
+                <li><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx" target="_blank">Modelo de Nota</a></li>
+
+                <li><a href="https://acor.gob.ar/" target="_blank">Pagina de Acor</a></li>
                 <li><a href="tel:080055556864" target="_blank">0800-Mantenimiento</a></li>
                 <li><a href="#">Preguntas Frecuentes</a></li>
-                <li><a href="https://acor.gob.ar/" target="_blank">Pagina Acor</a></li>
-                <li><a href="https://ciudaddecorrientes.gov.ar/" target="_blank">Municipalidad Ctes.</a></li>
             </ul>
         </section>
         <!-- LOGOS REDES SOCIALES -->
