--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <h3 id="pagos" class="title2">Donde abonar o Solicitar facturas impresas?</h3>
             <section class="order-Grid">
                 <div class="grid-container">
-                    <div class="grid-item1">
+                    <div class="grid-item1 mobile-grid">
                         <h3>AREA</h3>
                     </div>
                     <div class="grid-item1">
@@ -183,59 +183,59 @@
                     <div class="grid-item1">
                         <h3>HORARIOS</h3>
                     </div>
-                    <div class="grid-item rowone">
+                    <div class="grid-item rowone mobile-grid">
                         <h4>ACOR</h4>
                     </div>
                     <div class="grid-item rowone">
                         <h4>Avenida La Paz 2440</h4>
                     </div>
                     <div class="grid-item rowone">
-                        <h4>7:30AM a 16PM</h4>
+                        <h4>7:30 a 16:00</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item mobile-grid">
                         <h4>Caja municipal de Prestamos</h4>
                     </div>
                     <div class="grid-item">
                         <h4>Brasil 1275</h4>
                     </div>
                     <div class="grid-item">
-                        <h4>7AM a 13PM y 15AM a 20:30PM</h4>
+                        <h4>7:00 a 13:00/15:00 a 20:30</h4>
                     </div>
-                    <div class="grid-item rowone">
+                    <div class="grid-item rowone mobile-grid">
                         <h4>B° Molina Punta</h4>
                     </div>
                     <div class="grid-item rowone">
                         <h4>Las Margaritas y Jose Negro</h4>
                     </div>
                     <div class="grid-item rowone">
-                        <h4>8AM a 12AM</h4>
+                        <h4>8:00 a 12:00</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item mobile-grid">
                         <h4>B° San Martin</h4>
                     </div>
                     <div class="grid-item">
                         <h4>Mendoza y Lavalle</h4>
                     </div>
                     <div class="grid-item">
-                        <h4>8AM a 12AM y 14:30PM a 19:30PM</h4>
+                        <h4>8:00 a 12:00/14:30 a 19:30</h4>
                     </div>
-                    <div class="grid-item rowone">
+                    <div class="grid-item rowone mobile-grid">
                         <h4>B° Guemes</h4>
                     </div>
                     <div class="grid-item rowone">
                         <h4>Las Heras y Medrano</h4>
                     </div>
                     <div class="grid-item rowone">
-                        <h4>8AM a 12AM</h4>
+                        <h4>8:00 a 12:00</h4>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item mobile-grid">
                         <h4>B° 17 de Agosto</h4>
                     </div>
                     <div class="grid-item">
                         <h4>Cazadores Correntinos 5600</h4>
                     </div>
                     <div class="grid-item">
-                        <h4>8AM a 12AM</h4>
+                        <h4>8:00 a 12:00</h4>
                     </div>
                 </div>
             </section>
