--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h4>¿Qué es la contribución por mejoras?</h4>
                 <p class="parrafoo">Las contribuciones por mejoras es un sistema que permite la realizacion, de forma
                     financiada, de obras necesarias para el barrio, que son solicitadas por los vecinos.</p><br>
-                <p class="parrafoo">La presente propuesta tiene como objetivo la actualizacion de tecnologia en
+                <p class="parrafoo p-mobile">La presente propuesta tiene como objetivo la actualizacion de tecnologia en
                     luminarias con motivo de
                     brindar al vecino una mejor calidad de vida, y fomentar el crecimiento y desarrollo de la ciudad en
                     terminos urbanisticos.
@@ -86,7 +86,7 @@
                     <p>La presente propuesta tiene como objetivo la actualizacion de tecnologia en luminarias con motivo
                         de brindar al vecino una mejor calidad de vida, y fomentar el crecimiento y desarrollo de la
                         ciudad en terminos urbanisticos.</p><br>
-                    <p>Puede presentar la siguiente nota, completando la calle, sus intersecciones y firmada por al
+                    <p>Puede presentar la siguiente nota, solicitando la obra. Completando la calle, sus intersecciones y firmada por al
                         menos dos vecinos</p><br>
                     <button class="dowloadNotas">
                         <a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx" rel="noopener"
@@ -142,7 +142,7 @@
                         pudiéndose financiar hasta en 18 cuotas fijas y sin interés a optar por el vecino.
                     </p>
                     <br>
-                    <p>El valor restante será afrontado por el municipio, como asi también la totalidad de los costos
+                    <p class="parrafo-mob">El valor restante será afrontado por el municipio, como asi también la totalidad de los costos
                         inherentes a la instalación(mano de obra)
                         El importe mensual a abonar figurara en la boleta del impuesto inmobiliario, diferenciándose de
                         tal con el concepto de “Contribucion por mejoras” o las siglas “aol”.
@@ -153,21 +153,21 @@
         <!-- COMENTARIOS USUARIOS -->
         <section>
             <div class="comentarios">
-                <div class="anisha">
+                <div class="cards-info">
                     <img class="picture" src="./img/8.png" alt="Foto">
-                    <h4 class="name">En 1, 6, 12 o 18 Cuotas Fijas</h4>
-                    <p class="parrafo2">En caso de no optar por alguna de las opciones, se seleccionara por defecto en
+                    <h4 class="name desc-mobile">En 1, 6, 12 o 18 Cuotas Fijas</h4>
+                    <p class="parrafo2 desc-mobile">En caso de no optar por alguna de las opciones, se seleccionara por defecto en
                         18 cuotas fijas</p>
                 </div>
-                <div class="ali">
+                <div class="cards-info">
                     <img class="picture" src="./img/7.png" alt="Foto">
-                    <h4 class="name">Cuotas Fijas</h4>
-                    <p class="parrafo2">El valor de la cuota no se ajustara a la inflacion, es fija.</p>
+                    <h4 class="name desc-mobile">Cuotas Fijas</h4>
+                    <p class="parrafo2 desc-mobile">El valor de la cuota no se ajustara a la inflacion, es fija.</p>
                 </div>
-                <div class="richard">
+                <div class="cards-info">
                     <img class="picture" src="./img/6.png" alt="Foto">
-                    <h4 class="name">Pago por unica vez</h4>
-                    <p class="parrafo2">El pago de caracter "Contribucion por mejoras", se abona una unica vez, comienza
+                    <h4 class="name desc-mobile">Pago por unica vez</h4>
+                    <p class="parrafo2 desc-mobile">El pago de caracter "Contribucion por mejoras", se abona una unica vez, comienza
                         a pagar estando finalizada la obra</p>
                 </div>
             </div><br><br><br>
@@ -242,7 +242,7 @@
         </section>       
         <!-- simplify how your team... -->
         <section class="box4">
-            <h2 class="sub-title3">Consulta el estado de Deuda o imprimi tus boletas en la pagina de ACOR.</h2><br>
+            <h2 class="sub-title3">Consultá el estado de deuda o imprimí tus boletas en la página de ACOR.</h2><br>
             <button class="bt3"><a class="go-acor" href="https://acor.gob.ar/" target="_blank">
                 <i class="fa-solid fa-share-from-square"></i>ir a ACOR
             </a></button><br>
@@ -258,7 +258,7 @@
         <section class="mapDirec2">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3540.1427052872536!2d-58.83399698499008!3d-27.46481628289299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca702a91fc1%3A0x918624cb55c4a0d2!2s25%20de%20Mayo%201476%2C%20W3400%20BCT%2C%20Corrientes!5e0!3m2!1ses-419!2sar!4v1673444592665!5m2!1ses-419!2sar"
-                width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                width="365" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </section>
@@ -315,8 +315,9 @@
         <!-- FORMULARIO -->
         <section class="selector">
             <div class="email-footer">
+                <h2 class="mensaje-foot">Envianos un mensaje!</h2>
                 <div class="get-touch" data-aos="flip-right">
-                    <form action="https://formsubmit.co/leandev7@gmail.com" method="POST"
+                    <form action="https://formsubmit.co/dardojcoll@gmail.com" method="POST"
                         onsubmit="return submitForm(this);" class="reservation">
                         <div class="form-start">
                             <label for="Name"></label>
@@ -355,15 +356,14 @@
             <ul class="lista1">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="https://ciudaddecorrientes.gov.ar/" target="_blank">Municipalidad de Corrientes</a></li>
-                <li><a href="https://sis.concejocorrientes.gob.ar/uploads/6837.pdf" target="_blank">Ordenanza N°6837</a></li>
-                <li><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos ART. 108°/109°</a></li>
+                <li class="list-desk"><a href="https://sis.concejocorrientes.gob.ar/uploads/6837.pdf" target="_blank">Ordenanza N°6837</a></li>
+                <li class="list-desk"><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos ART. 108°/109°</a></li>
 
             </ul>
             <ul class="lista2">
-                <li><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx" target="_blank">Modelo de Nota</a></li>
-
+                <li class="list-desk"><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx" target="_blank">Modelo de Nota</a></li>
                 <li><a href="https://acor.gob.ar/" target="_blank">Pagina de Acor</a></li>
-                <li><a href="tel:080055556864" target="_blank">0800-Mantenimiento</a></li>
+                <li class="list-desk"><a href="tel:080055556864" target="_blank">0800-Mantenimiento</a></li>
                 <li><a href="#">Preguntas Frecuentes</a></li>
             </ul>
         </section>
@@ -376,9 +376,9 @@
         </section>
 
         <!-- COPYRIGHT QUE SE VISUALIZA EN MOBILE -->
-        <div>
+        <!-- <div>
             <p class="copyright">Copyright 2022. All Rights Reserved - Disign&Developed by Leandro Martinez</p>
-        </div>
+        </div> -->
 
         <!-- COPYRIGHT QUE SE VISUALIZA EN DESKTOP -->
         <div class="cop">
