--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 <li class="list-desk"><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx" target="_blank">Modelo de Nota</a></li>
                 <li><a href="https://acor.gob.ar/" target="_blank">Pagina de Acor</a></li>
                 <li class="list-desk"><a href="tel:080055556864" target="_blank">0800-Mantenimiento</a></li>
-                <li><a href="#">Preguntas Frecuentes</a></li>
+                <li><a href="./faq.html">Preguntas Frecuentes</a></li>
             </ul>
         </section>
         <!-- LOGOS REDES SOCIALES -->
