--- a/index.html
+++ b/index.html
@@ -9,37 +9,27 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/e108fbf003.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="text/javascript" src="./floating-whatsapp-master/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./floating-whatsapp-master/floating-wpp.min.js"></script>
-    <link rel="stylesheet" href="./floating-whatsapp-master/floating-wpp.min.css">    
+    <link rel="stylesheet" href="./floating-whatsapp-master/floating-wpp.min.css">
     <title>FOGOP</title>
 </head>
 
 <body>
-    <!-- INICIO HEADER -->
     <header>
-        <!-- MARCA MANAGE/ISOTIPO+LOGOTIPO -->
         <div class="marca">
             <img class="logotype" src="./img/logotypeFogop.png" alt="FOGOP">
         </div>
-        <!-- MENU DESKTOP -->
         <nav class="mn-dsktop">
             <ul class="desktop-menu">
                 <li><a class="navcolor2" href="#project">Proyecto de Luminarias</a></li>
                 <li><a class="navcolor3" href="#obras">Sobre Obras</a></li>
                 <li><a class="navcolor4" href="#pagos">Sobre Pagos</a></li>
-                <!-- <li><a href="#">Acerca de Fogop</a></li> -->
                 <li><a class="navcolor5" href="#donde">Donde Estamos</a></li>
             </ul>
         </nav>
-        <!-- <button class="btton">Consultar Estado</button> -->
     </header>
-    <!-- FIN HEADER -->
-
-
-    <!-- INICIO MAIN -->
     <main>
         <div class="slide-contenedor">
             <div class="miSlider fade">
@@ -61,7 +51,6 @@
                 <span class="barra" onclick="posicionSlide(3)"></span>
             </div>
         </div>
-        <!-- Bring everyone... + grafico -->
         <section class="column1" id="project">
             <div class="graf">
                 <img src="/img/f3.jpg" alt="graficos">
@@ -78,7 +67,6 @@
                 </p>
             </div>
         </section>
-        <!-- "whats different..." -->
         <section class="box beta">
             <div>
                 <article class="box-what">
@@ -86,7 +74,8 @@
                     <p>La presente propuesta tiene como objetivo la actualizacion de tecnologia en luminarias con motivo
                         de brindar al vecino una mejor calidad de vida, y fomentar el crecimiento y desarrollo de la
                         ciudad en terminos urbanisticos.</p><br>
-                    <p>Puede presentar la siguiente nota, solicitando la obra. Completando la calle, sus intersecciones y firmada por al
+                    <p>Puede presentar la siguiente nota, solicitando la obra. Completando la calle, sus intersecciones
+                        y firmada por al
                         menos dos vecinos</p><br>
                     <button class="dowloadNotas">
                         <a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx" rel="noopener"
@@ -94,11 +83,9 @@
                     </button>
                 </article>
             </div>
-            <!-- Articulos... -->
             <div class="align-p">
                 <article>
                     <div class="box2">
-                        <!-- <button class="config-botton">02</button> -->
                         <h4 class="sub-title2">
                             <i class="fa-solid fa-check-double"></i>
                             Obra
@@ -110,7 +97,6 @@
                 </article>
                 <article>
                     <div class="box2">
-                        <!-- <button class="config-botton">03</button> -->
                         <h4 class="sub-title2">
                             <i class="fa-solid fa-check-double"></i>
                             Instalacion
@@ -121,7 +107,6 @@
                 </article>
                 <article>
                     <div class="box2">
-                        <!-- <button class="config-botton">01</button> -->
                         <h4 class="sub-title2">
                             <i class="fa-solid fa-check-double"></i>
                             Iluminacion
@@ -129,10 +114,10 @@
                     </div>
                     <p>La iluminación consta de columnas metálicas de 9 metros de altura con brazo/acople incorporado,
                         donde se extiende una luminaria unilateral de 120W de potencia.</p><br>
-                </article>                
+                </article>
             </div>
         </section>
-        <section class="box beta">           
+        <section class="box beta">
             <div>
                 <article class="box-what">
                     <h3 class="sub-title">Financiacion</h3>
@@ -142,7 +127,8 @@
                         pudiéndose financiar hasta en 18 cuotas fijas y sin interés a optar por el vecino.
                     </p>
                     <br>
-                    <p class="parrafo-mob">El valor restante será afrontado por el municipio, como asi también la totalidad de los costos
+                    <p class="parrafo-mob">El valor restante será afrontado por el municipio, como asi también la
+                        totalidad de los costos
                         inherentes a la instalación(mano de obra)
                         El importe mensual a abonar figurara en la boleta del impuesto inmobiliario, diferenciándose de
                         tal con el concepto de “Contribucion por mejoras” o las siglas “aol”.
@@ -150,13 +136,13 @@
                 </article>
             </div>
         </section>
-        <!-- COMENTARIOS USUARIOS -->
         <section>
             <div class="comentarios">
                 <div class="cards-info">
                     <img class="picture" src="./img/8.png" alt="Foto">
                     <h4 class="name desc-mobile">En 1, 6, 12 o 18 Cuotas Fijas</h4>
-                    <p class="parrafo2 desc-mobile">En caso de no optar por alguna de las opciones, se seleccionara por defecto en
+                    <p class="parrafo2 desc-mobile">En caso de no optar por alguna de las opciones, se seleccionara por
+                        defecto en
                         18 cuotas fijas</p>
                 </div>
                 <div class="cards-info">
@@ -167,7 +153,8 @@
                 <div class="cards-info">
                     <img class="picture" src="./img/6.png" alt="Foto">
                     <h4 class="name desc-mobile">Pago por unica vez</h4>
-                    <p class="parrafo2 desc-mobile">El pago de caracter "Contribucion por mejoras", se abona una unica vez, comienza
+                    <p class="parrafo2 desc-mobile">El pago de caracter "Contribucion por mejoras", se abona una unica
+                        vez, comienza
                         a pagar estando finalizada la obra</p>
                 </div>
             </div><br><br><br>
@@ -239,13 +226,12 @@
                     </div>
                 </div>
             </section>
-        </section>       
-        <!-- simplify how your team... -->
+        </section>
         <section class="box4">
             <h2 class="sub-title3">Consultá el estado de deuda o imprimí tus boletas en la página de ACOR.</h2><br>
             <button class="bt3"><a class="go-acor" href="https://acor.gob.ar/" target="_blank">
-                <i class="fa-solid fa-share-from-square"></i>ir a ACOR
-            </a></button><br>
+                    <i class="fa-solid fa-share-from-square"></i>ir a ACOR
+                </a></button><br>
         </section>
         <h3 id="donde" class="title2">DONDE ESTAMOS</h3>
         <section class="mapDirec">
@@ -262,28 +248,24 @@
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </section>
-
         <section class="grid-ubi">
-            <div class="grid-container2">                
+            <div class="grid-container2">
                 <div class="grid-item2">
                     <i class="fa-solid fa-location-dot"></i>
-
                 </div>
                 <div class="grid-item3">
                     <h4>25 de Mayo 1476</h4>
                 </div>
                 <div class="grid-item2">
                     <i class="fa-solid fa-clock"></i>
-
                 </div>
                 <div class="grid-item3">
                     <div id="message">
                         <span id="status"></span> - <span id="hours"></span>
-                    </div>                    
+                    </div>
                 </div>
                 <div class="grid-item2">
                     <i class="fa-solid fa-phone"></i>
-
                 </div>
                 <div class="grid-item3">
                     <a href="tel:5493794265994" target="_blank">
@@ -292,27 +274,20 @@
                 </div>
                 <div class="grid-item2">
                     <i class="fa-solid fa-envelope"></i>
-
                 </div>
                 <div class="grid-item3">
                     <h4>fogopmcc@gmail.com</h4>
                 </div>
-                
-            </div>           
+            </div>
         </section>
     </main>
-    <!-- FIN MAIN -->
-
-
-    <!-- INICIO FOOTER -->
     <section class="box4">
         <h2 class="sub-title3">Por inconvenientes con el servicio o para solicitar mantenimiento comunicate al:</h2><br>
         <button class="bt3"><a class="phone800" href="tel:080055556864" target="_blank">
-            <i class="fa-solid fa-phone-volume"></i>0800-55556864
-        </a></button><br>
+                <i class="fa-solid fa-phone-volume"></i>0800-55556864
+            </a></button><br>
     </section>
     <footer>
-        <!-- FORMULARIO -->
         <section class="selector">
             <div class="email-footer">
                 <h2 class="mensaje-foot">Envianos un mensaje!</h2>
@@ -321,20 +296,16 @@
                         onsubmit="return submitForm(this);" class="reservation">
                         <div class="form-start">
                             <label for="Name"></label>
-                            <!-- <h3>Nombre Completo</h3> -->
                             <input class="form-name" type="text" name="name" class="lang" key="text108"
                                 placeholder="Ingresa tu nombre">
-                            <!-- required -->
                             <label for="email"></label>
-                            <!-- <h3>Correo Electronico</h3> -->
                             <input class="form-email" type="email" name="email" id="email" class="lang" key="text109"
-                                placeholder="Ingresa un Correo valido"><!-- required -->
+                                placeholder="Ingresa un Correo valido">
                         </div>
                         <div class="form-text">
                             <label for="Text"></label>
-                            <!-- <h3>Mensaje</h3> -->
                             <textarea class="form-message" name="message" cols="20" rows="5" class="lang" key="text110"
-                                placeholder="Escribe tu mensaje..."></textarea><!-- required -->
+                                placeholder="Escribe tu mensaje..."></textarea>
                         </div>
                         <div class="verificar">
                             <div class="errores">
@@ -349,44 +320,35 @@
                     </form>
                 </div>
             </div>
-            </div>           
+            </div>
         </section>
-
         <section class="listas">
             <ul class="lista1">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="https://ciudaddecorrientes.gov.ar/" target="_blank">Municipalidad de Corrientes</a></li>
-                <li class="list-desk"><a href="https://sis.concejocorrientes.gob.ar/uploads/6837.pdf" target="_blank">Ordenanza N°6837</a></li>
-                <li class="list-desk"><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos ART. 108°/109°</a></li>
-
+                <li class="list-desk"><a href="https://sis.concejocorrientes.gob.ar/uploads/6837.pdf"
+                        target="_blank">Ordenanza N°6837</a></li>
+                <li class="list-desk"><a href="./notas/exenciones para pagos.pdf" target="_blank">Excentos de Pagos ART.
+                        108°/109°</a></li>
             </ul>
             <ul class="lista2">
-                <li class="list-desk"><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx" target="_blank">Modelo de Nota</a></li>
+                <li class="list-desk"><a href="./notas/Modelo Solicitud Vecinos luminaria - FOGOP.docx"
+                        target="_blank">Modelo de Nota</a></li>
                 <li><a href="https://acor.gob.ar/" target="_blank">Pagina de Acor</a></li>
                 <li class="list-desk"><a href="tel:080055556864" target="_blank">0800-Mantenimiento</a></li>
                 <li><a href="./faq.html">Preguntas Frecuentes</a></li>
             </ul>
         </section>
-        <!-- LOGOS REDES SOCIALES -->
         <section class="column-footer">
-            <!-- MARCA MANAGE/ISOTIPO+LOGOTIPO -->
             <div class="logo-f">
                 <a href="#"><img src="img/logoFoot.png" alt="logo Manage"></a><br>
-            </div>            
+            </div>
         </section>
-
-        <!-- COPYRIGHT QUE SE VISUALIZA EN MOBILE -->
-        <!-- <div>
-            <p class="copyright">Copyright 2022. All Rights Reserved - Disign&Developed by Leandro Martinez</p>
-        </div> -->
-
-        <!-- COPYRIGHT QUE SE VISUALIZA EN DESKTOP -->
         <div class="cop">
-            <p class="copyright2">Copyright 2023. All Rights Reserved - Disign&Developed by <a class="copyright2" href="https://www.linkedin.com/in/leandromz/" target="_blank">Leandro Martinez</a></p>
+            <p class="copyright2">Copyright 2023. All Rights Reserved - Disign&Developed by <a class="copyright2"
+                    href="https://www.linkedin.com/in/leandromz/" target="_blank">Leandro Martinez</a></p>
         </div>
     </footer>
-    <!-- FIN FOOTER -->
-
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <script src="app.js"></script>
     <div id="myButton"></div>
