--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/img/icoo.png">
+    <link rel="icon" type="image/png" href="/img/icoo.webp">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/e108fbf003.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logotype" src="./img/logotypeFogop.png" alt="FOGOP">
+            <img class="logotype" src="./img/logotypefogop.webp" alt="FOGOP">
         </div>
         <nav class="mn-dsktop">
             <ul class="desktop-menu">
@@ -33,13 +33,13 @@
     <main>
         <div class="slide-contenedor">
             <div class="miSlider fade">
-                <img src="/img/f2.jpg" alt="">
+                <img src="/img/f2.webp" alt="">
             </div>
             <div class="miSlider fade">
-                <img src="/img/f1.jpg" alt="">
+                <img src="/img/f1.webp" alt="">
             </div>
             <div class="miSlider fade">
-                <img src="/img/f3.jpg" alt="">
+                <img src="/img/f4.webp" alt="">
             </div>
             <div class="direcciones">
                 <a href="#" class="atras" onclick="avanzaSlide(-1)">&#10094;</a>
@@ -53,7 +53,7 @@
         </div>
         <section class="column1" id="project">
             <div class="graf">
-                <img src="/img/f3.jpg" alt="graficos">
+                <img src="/img/f3.webp" alt="graficos">
             </div>
             <div class="box">
                 <h3 class="title">Proyecto de Luminarias</h3><br>
@@ -139,19 +139,19 @@
         <section>
             <div class="comentarios">
                 <div class="cards-info">
-                    <img class="picture" src="./img/8.png" alt="Foto">
+                    <img class="picture" src="./img/8.webp" alt="Foto">
                     <h4 class="name desc-mobile">En 1, 6, 12 o 18 Cuotas Fijas</h4>
                     <p class="parrafo2 desc-mobile">En caso de no optar por alguna de las opciones, se seleccionara por
                         defecto en
                         18 cuotas fijas</p>
                 </div>
                 <div class="cards-info">
-                    <img class="picture" src="./img/7.png" alt="Foto">
+                    <img class="picture" src="./img/7.webp" alt="Foto">
                     <h4 class="name desc-mobile">Cuotas Fijas</h4>
                     <p class="parrafo2 desc-mobile">El valor de la cuota no se ajustara a la inflacion, es fija.</p>
                 </div>
                 <div class="cards-info">
-                    <img class="picture" src="./img/6.png" alt="Foto">
+                    <img class="picture" src="./img/6.webp" alt="Foto">
                     <h4 class="name desc-mobile">Pago por unica vez</h4>
                     <p class="parrafo2 desc-mobile">El pago de caracter "Contribucion por mejoras", se abona una unica
                         vez, comienza
@@ -341,7 +341,7 @@
         </section>
         <section class="column-footer">
             <div class="logo-f">
-                <a href="#"><img src="img/logoFoot.png" alt="logo Manage"></a><br>
+                <a href="#"><img src="img/logoFoot.webp" alt="logo Manage"></a><br>
             </div>
         </section>
         <div class="cop">
