--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
     <script type="text/javascript" src="./floating-whatsapp-master/floating-wpp.min.js"></script>
     <link rel="stylesheet" href="./floating-whatsapp-master/floating-wpp.min.css">
     <title>FOGOP</title>
+    <meta name="description" content="El fondo Fiduciario para la Obra Publica de sus siglas FOGOP, realiza propuestas y proyectos de mejoras, es un sistema que permite la realizacion, de forma financiada, de obras necesarias para el barrio, que son solicitadas por los vecinos.">
+    <meta name="author" content="Leandro Martinez">
+    <meta name="keywords" content="FOGOP, Fiduciaria, Fondo Fuduciario para la Obra Publica, Luminarias, aol, municipal, munipalidad de corrientes, corrientes, 
+    Contribucion por mejoras, impuesto inmobiliario, ACOR, luminarias, mejoras, seguridad, postes luminicos, proyecto de luminarias, Leandro Martinez">
 </head>
 
 <body>
     <header>
         <div class="marca">
-            <img class="logotype" src="./img/logotypefogop.webp" alt="FOGOP">
+            <img class="logotype" src="./img/logotypefogop.webp" alt="FOGOP logo">
         </div>
         <nav class="mn-dsktop">
             <ul class="desktop-menu">
@@ -33,13 +37,13 @@
     <main>
         <div class="slide-contenedor">
             <div class="miSlider fade">
-                <img src="/img/f2.webp" alt="">
+                <img src="/img/f2.webp" alt="funcionamiento de las luminarias">
             </div>
             <div class="miSlider fade">
-                <img src="/img/f1.webp" alt="">
+                <img src="/img/f1.webp" alt="instalacion de luminarias">
             </div>
             <div class="miSlider fade">
-                <img src="/img/f4.webp" alt="">
+                <img src="/img/f4.webp" alt="luminarias">
             </div>
             <div class="direcciones">
                 <a href="#" class="atras" onclick="avanzaSlide(-1)">&#10094;</a>
@@ -139,19 +143,19 @@
         <section>
             <div class="comentarios">
                 <div class="cards-info">
-                    <img class="picture" src="./img/8.webp" alt="Foto">
+                    <img class="picture" src="./img/8.webp" alt="detalles de cuotas">
                     <h4 class="name desc-mobile">En 1, 6, 12 o 18 Cuotas Fijas</h4>
                     <p class="parrafo2 desc-mobile">En caso de no optar por alguna de las opciones, se seleccionara por
                         defecto en
                         18 cuotas fijas</p>
                 </div>
                 <div class="cards-info">
-                    <img class="picture" src="./img/7.webp" alt="Foto">
+                    <img class="picture" src="./img/7.webp" alt="cuotas fijas">
                     <h4 class="name desc-mobile">Cuotas Fijas</h4>
                     <p class="parrafo2 desc-mobile">El valor de la cuota no se ajustara a la inflacion, es fija.</p>
                 </div>
                 <div class="cards-info">
-                    <img class="picture" src="./img/6.webp" alt="Foto">
+                    <img class="picture" src="./img/6.webp" alt="abono unico">
                     <h4 class="name desc-mobile">Pago por unica vez</h4>
                     <p class="parrafo2 desc-mobile">El pago de caracter "Contribucion por mejoras", se abona una unica
                         vez, comienza
@@ -341,7 +345,7 @@
         </section>
         <section class="column-footer">
             <div class="logo-f">
-                <a href="#"><img src="img/logoFoot.webp" alt="logo Manage"></a><br>
+                <a href="#"><img src="img/logoFoot.webp" alt="logo de FOGOP"></a><br>
             </div>
         </section>
         <div class="cop">
