--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <main>
         <div class="slide-contenedor">
             <div class="miSlider fade">
-                <img src="/img/f2.webp" alt="funcionamiento de las luminarias">
+                <img src="/img/f2.webp" alt="funcionamiento de las luminarias, FOGOP">
             </div>
             <div class="miSlider fade">
-                <img src="/img/f1.webp" alt="instalacion de luminarias">
+                <img src="/img/f1.webp" alt="instalacion de luminarias, FOGOP">
             </div>
             <div class="miSlider fade">
-                <img src="/img/f4.webp" alt="luminarias">
+                <img src="/img/f4.webp" alt="luminarias, FOGOP">
             </div>
             <div class="direcciones">
                 <a href="#" class="atras" onclick="avanzaSlide(-1)">&#10094;</a>
@@ -57,7 +57,7 @@
         </div>
         <section class="column1" id="project">
             <div class="graf">
-                <img src="/img/f3.webp" alt="graficos">
+                <img src="/img/f3.webp" alt="proyecto luminarias, FOGOP">
             </div>
             <div class="box">
                 <h3 class="title">Proyecto de Luminarias</h3><br>
@@ -143,19 +143,19 @@
         <section>
             <div class="comentarios">
                 <div class="cards-info">
-                    <img class="picture" src="./img/8.webp" alt="detalles de cuotas">
+                    <img class="picture" src="./img/8.webp" alt="detalles de cuotas FOGOP">
                     <h4 class="name desc-mobile">En 1, 6, 12 o 18 Cuotas Fijas</h4>
                     <p class="parrafo2 desc-mobile">En caso de no optar por alguna de las opciones, se seleccionara por
                         defecto en
                         18 cuotas fijas</p>
                 </div>
                 <div class="cards-info">
-                    <img class="picture" src="./img/7.webp" alt="cuotas fijas">
+                    <img class="picture" src="./img/7.webp" alt="cuotas fijas FOGOP">
                     <h4 class="name desc-mobile">Cuotas Fijas</h4>
                     <p class="parrafo2 desc-mobile">El valor de la cuota no se ajustara a la inflacion, es fija.</p>
                 </div>
                 <div class="cards-info">
-                    <img class="picture" src="./img/6.webp" alt="abono unico">
+                    <img class="picture" src="./img/6.webp" alt="abono unico FOGOP">
                     <h4 class="name desc-mobile">Pago por unica vez</h4>
                     <p class="parrafo2 desc-mobile">El pago de caracter "Contribucion por mejoras", se abona una unica
                         vez, comienza
