--- a/faq.html
+++ b/faq.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOGOP - Preguntas Frecuentes</title>
+    <meta name="description" content="Preguntas Frecuentes que realizan los vecinos, que adquieren o desean adquirir las obras de mejoras en los barrios o calles.">
+    <meta name="author" content="Leandro Martinez">
+    <meta name="keywords" content="FOGOP, Fiduciaria, Fondo Fuduciario para la Obra Publica, Luminarias, aol, municipal, munipalidad de corrientes, corrientes, 
+    Contribucion por mejoras, impuesto inmobiliario, ACOR, luminarias, mejoras, seguridad, postes luminicos, proyecto de luminarias, preguntas frecuentes, vecinos, Leandro Martinez">
     <link href="/css/faq-css.css" rel="stylesheet">
 </head>
 <body>
-    <img id="logo-img" src="/img/logotypeFogop.png" alt="logo FOGOP">
+    <img id="logo-img" src="/img/logotypefogop.webp" alt="logo FOGOP">
     <div class="faq-container">
         <h1>Preguntas Frecuentes</h1>
         <div class="faq-question">
