--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
     <link href="/css/faq-css.css" rel="stylesheet">
 </head>
 <body>
-    <img id="logo-img" src="/img/logotypefogop.webp" alt="logo FOGOP">
+    <img id="logo-img" class="lazyload" data-src="/img/logotypefogop.webp" alt="logo FOGOP">
     <div class="faq-container">
         <h1>Preguntas Frecuentes</h1>
         <div class="faq-question">
