--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="text/javascript" src="./floating-whatsapp-master/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./floating-whatsapp-master/floating-wpp.min.js"></script>
+    <script src="/lazysizes.min.js"></script>
     <link rel="stylesheet" href="./floating-whatsapp-master/floating-wpp.min.css">
     <title>FOGOP</title>
     <meta name="description" content="El fondo Fiduciario para la Obra Publica de sus siglas FOGOP, realiza propuestas y proyectos de mejoras, es un sistema que permite la realizacion, de forma financiada, de obras necesarias para el barrio, que son solicitadas por los vecinos.">
@@ -57,7 +58,7 @@
         </div>
         <section class="column1" id="project">
             <div class="graf">
-                <img src="/img/f3.webp" alt="proyecto luminarias, FOGOP">
+                <img class="lazyload" data-src="/img/f3.webp" alt="proyecto luminarias, FOGOP">
             </div>
             <div class="box">
                 <h3 class="title">Proyecto de Luminarias</h3><br>
@@ -143,19 +144,19 @@
         <section>
             <div class="comentarios">
                 <div class="cards-info">
-                    <img class="picture" src="./img/8.webp" alt="detalles de cuotas FOGOP">
+                    <img class="picture lazyload" data-src="./img/8.webp" alt="detalles de cuotas FOGOP">
                     <h4 class="name desc-mobile">En 1, 6, 12 o 18 Cuotas Fijas</h4>
                     <p class="parrafo2 desc-mobile">En caso de no optar por alguna de las opciones, se seleccionara por
                         defecto en
                         18 cuotas fijas</p>
                 </div>
                 <div class="cards-info">
-                    <img class="picture" src="./img/7.webp" alt="cuotas fijas FOGOP">
+                    <img class="picture lazyload" data-src="./img/7.webp" alt="cuotas fijas FOGOP">
                     <h4 class="name desc-mobile">Cuotas Fijas</h4>
                     <p class="parrafo2 desc-mobile">El valor de la cuota no se ajustara a la inflacion, es fija.</p>
                 </div>
                 <div class="cards-info">
-                    <img class="picture" src="./img/6.webp" alt="abono unico FOGOP">
+                    <img class="picture lazyload" data-src=="./img/6.webp" alt="abono unico FOGOP">
                     <h4 class="name desc-mobile">Pago por unica vez</h4>
                     <p class="parrafo2 desc-mobile">El pago de caracter "Contribucion por mejoras", se abona una unica
                         vez, comienza
@@ -345,7 +346,7 @@
         </section>
         <section class="column-footer">
             <div class="logo-f">
-                <a href="#"><img src="img/logoFoot.webp" alt="logo de FOGOP"></a><br>
+                <a href="#"><img class="lazyload" data-src="img/logoFoot.webp" alt="logo de FOGOP"></a><br>
             </div>
         </section>
         <div class="cop">
