--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/img/icoo.webp">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/e108fbf003.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script type="text/javascript" src="./floating-whatsapp-master/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="./floating-whatsapp-master/floating-wpp.min.js"></script>
     <script src="/lazysizes.min.js"></script>
+    <script src="https://kit.fontawesome.com/e108fbf003.js" crossorigin="anonymous" async></script>
+    <script type="text/javascript" src="./floating-whatsapp-master/jquery-3.3.1.min.js" async></script>
+    <script type="text/javascript" src="./floating-whatsapp-master/floating-wpp.min.js" async></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" async></script>
     <link rel="stylesheet" href="./floating-whatsapp-master/floating-wpp.min.css">
     <title>FOGOP</title>
     <meta name="description" content="El fondo Fiduciario para la Obra Publica de sus siglas FOGOP, realiza propuestas y proyectos de mejoras, es un sistema que permite la realizacion, de forma financiada, de obras necesarias para el barrio, que son solicitadas por los vecinos.">
