--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <p class="parrafo2 desc-mobile">El valor de la cuota no se ajustara a la inflacion, es fija.</p>
                 </div>
                 <div class="cards-info">
-                    <img class="picture lazyload" data-src=="./img/6.webp" alt="abono unico FOGOP">
+                    <img class="picture lazyload" data-src="./img/6.webp" alt="abono unico FOGOP">
                     <h4 class="name desc-mobile">Pago por unica vez</h4>
                     <p class="parrafo2 desc-mobile">El pago de caracter "Contribucion por mejoras", se abona una unica
                         vez, comienza
