--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="/lazysizes.min.js"></script>
     <script src="https://kit.fontawesome.com/e108fbf003.js" crossorigin="anonymous" async></script>
-    <script type="text/javascript" src="./floating-whatsapp-master/jquery-3.3.1.min.js" async></script>
-    <script type="text/javascript" src="./floating-whatsapp-master/floating-wpp.min.js" async></script>
+    <script type="text/javascript" src="./floating-whatsapp-master/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="./floating-whatsapp-master/floating-wpp.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" async></script>
     <link rel="stylesheet" href="./floating-whatsapp-master/floating-wpp.min.css">
     <title>FOGOP</title>
